--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,8 @@
     border: 1px solid #ccc;
     padding: 10px;
     font-family: monospace;
-    overflow: hidden;
-    white-space: nowrap;
+    overflow: auto; 
+    white-space: pre-wrap; 
     height: 320px;
     width: 100%;
 }
