--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html,body{
 .container {
     display: flex;
     justify-content: space-between; /* Para distribuir los elementos horizontalmente */
-    padding: 30px; /* Añadimos espacio alrededor de los elementos */
+    padding: 20px; /* Añadimos espacio alrededor de los elementos */
 }
 
 .card-container {
@@ -16,15 +16,17 @@ html,body{
 
 .card {
     width: 100%;
+    height: 700px;
 }
 
 .card-img-top {
     width: 100%;
-    height: auto; /* Para que la imagen mantenga su aspecto original */
+    height: 350px; 
 }
 
 .form {
     font-size: 20px;
+    margin-right: 30px;
     width: 40%;
 }
 .form-control{
@@ -61,3 +63,15 @@ html,body{
     position: relative;
     border-radius: .25rem;
 }
+.maquina-escribir2 {
+    font-size: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    font-family: monospace;
+    overflow: auto; 
+    height: 320px;
+    width: 100%;
+    position: relative;
+    border-radius: .25rem;
+}
+
